--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,7 @@ apply plugin:"asset-pipeline"
 apply from: 'https://raw.githubusercontent.com/AtlasOfLivingAustralia/travis-build-configuration/master/travis_grails_publish.gradle'
 
 // Set to true it needed only for development
-boolean inplace = false
-
+boolean inplace = true
 if (inplace) {
     grails {
         exploded = true
